# qt_gadget_edit_model

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GadgetEditor/: CMakeLists.txt  GadgetDataModel.cpp  GadgetDataModel.h  GadgetEditor_global.h
TestApp/: CMakeLists.txt  main.cpp  selectitemforedit.cpp  selectitemforedit.h  selectitemforedit.ui
gui_components/: CMakeLists.txt
gui_components/src/: CMakeLists.txt  edit_struct_base.cpp  edit_struct_base.h  fancySlider_h.cpp  fancySlider_h.h
